# sand-sim-rs

./: .env  Cargo.toml  Config.toml
src/: config.rs  lib.rs  main.rs  particle.rs
