[package]
name = "sand"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenvy = "0.15.7"
hashbrown = "0.15.1"
lazy_static = "1.5.0"
log = "0.4.22"
piston2d-graphics = "0.45.0"
piston2d-opengl_graphics = "0.85.0"
piston_window = "0.132.0"
pistoncore-glutin_window = "0.72.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v7"] }
